# OpenLithoHub

./: .gitignore  CHANGELOG.md  CITATION.cff  CLA-CORPORATE.md  CLA-INDIVIDUAL.md  CODE_OF_CONDUCT.md  COMMERCIAL-USE.md  CONTRIBUTING.md  DATA-LICENSES.md  Dockerfile  LICENSE-DOCS  Makefile  NOTICE  PATENT-ANALYSIS-helmholtz-ilt.md  README.md  README_zh.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  pip-audit-ignore.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-leaderboard.yml  build-asap7-mock-alu.yml  ci.yml  dataset-urls-probe.yml  docker.yml  docs.yml  publish.yml  release-klayout-salt.yml  sync-hf-space.yml
baselines/: README.md  orfs-mock-alu-2um.json  orfs-mock-alu-5um.json  results.json  results.md
benchmarks/: benchmark_multiproc.py  selfhost_multiproc.md
benchmarks/results/: selfhost_multiproc.json
docs/: README_zh.md  architecture.md  benchmarks.md  capability_matrix.md  citations.md  cli-reference.md  commercial_viability_assessment.md  community.md  contributing.md  getting-started.md  hackathon.md  halo-and-tiling.md  hf-auth.md  index.md  leaderboard-submission.md  lithography-for-ai-engineers.md  networking.md  orfs-integration.md  references.bib  references.md  resist_capability_matrix.md  self_hosted_deployment.md
docs/announcements/: 2026-05-launch.md
docs/api/: benchmark.md  data.md  leaderboard.md  models.md  oo_api.md  simulators.md  vis.md  workflow.md
docs/assets/: hero.json
docs/audits/: gan-opc-architecture.md  layout-mae-architecture.md  levelset-ilt-architecture.md  neural-ilt-architecture.md  openilt-architecture.md
docs/notes/: asap7-cell-naming.md  data-show-gallery.md  openram-freepdk45.md
docs/rfcs/: 0001-base-model.md  0002-layout-tokens.md  0003-mrc-rule-deck-schema.md  0004-multi-gpu-tile-pipeline.md  0005-process-node-halo-sizing.md  0006-mcp-bridge.md  lifecycle.md
docs/stylesheets/: branding.css
examples/: commercial_sim_demo.py  eda_bridge_demo.py
hackathon/: 2026q3.yaml
huggingface/neural-ilt-v0.1/: README.md
klayout/: README.md
klayout/openlithohub_macro/: grain.xml  menu.lym  openlithohub_optimize.py
leaderboard/: leaderboard.json
notebooks/: README.md  auto_calibration.ipynb  colab_byom.ipynb  quickstart.ipynb
scripts/: README.md  _eval_v02_iccad16.py  _eval_v03_iccad16.py  _eval_v04_iccad16.py  _p0_probe_violation_widths.py  _p1_socs_energy_sweep.py  _probe_p0.py  _probe_p1.py  _probe_p2.py  _probe_p3_pvb_bandwidth.py  _probe_p4_p5_p6.py  benchmark_performance.py  build_litho_tiny.py  build_riscv_alu.sh  check_readme_parity.py  generate_baselines.py  generate_demo_samples.py  generate_hero_figure.py  leaderboard_append_entries.py  leaderboard_validate_submissions.py  lint_docs_links.py  plot_benchmarks.py  run_hotspot_baseline.py  train_gan_opc.py  train_neural_ilt.py  train_neural_ilt_seed.py
spaces/: README.md  app.py  requirements.txt
spaces/examples/: README.md
src/openlithohub/: __init__.py  _constants.py  _version.py  tokens.py
src/openlithohub/_utils/: __init__.py  auto_crop.py  contour_trace.py  convergence.py  determinism.py  forward_model.py  helmholtz_filter.py  hopkins.py  integrity.py  logging.py  morphology.py  optics.py  resist_model.py  sampling.py  tensor_ops.py
src/openlithohub/api/: __init__.py  engine.py  mask.py  report.py
src/openlithohub/baselines/: __init__.py  hotspot_batchal.py
src/openlithohub/benchmark/: __init__.py  report.py
src/openlithohub/cli/: __init__.py  app.py  data_cmd.py  eval_cmd.py  export_cmd.py  flow_cmd.py  hackathon_cmd.py  leaderboard_cmd.py  optimize_cmd.py  serve_cmd.py  simulate_cmd.py  synth_cmd.py
src/openlithohub/data/: __init__.py  _audit.py  _layers.py  asap7.py  base.py  dummy.py  exporters.py  freepdk45.py  freepdk45_sram.py  ganopc.py  iccad16.py  io.py  lithobench.py  lithosim.py  orfs.py  (+1 more)
submissions/: ci-dryrun-dummy.yaml
submissions/_template/: example-model.yaml
tests/: conftest.py  test_commercial_sim_demo.py  test_eda_bridge_demo.py  test_hackathon_manifest.py  test_multiproc.py  test_plugin_gateway.py  test_tokens.py
tests/benchmarks/: bench_metrics.py  test_mrc_loss.py  test_sraf_loss.py
tests/scripts/: test_train_gan_opc_v02.py  test_train_gan_opc_v03.py
tests/test_api/: test_engine.py  test_mask.py  test_report.py
tests/test_baselines/: test_hotspot_batchal.py
tests/test_benchmark/: test_compliance.py  test_euv_3d_and_monte_carlo.py  test_metrics.py  test_provenance.py  test_report.py  test_rule_deck.py
tests/test_cli/: test_commands.py  test_data_cmd.py  test_eval_submit.py  test_export.py  test_leaderboard_cmd.py
tests/test_data/: test_adapters.py  test_asap7.py  test_audit.py  test_croissant.py  test_dummy.py  test_exporters.py  test_freepdk45.py  test_freepdk45_sram.py  test_io.py  test_layers.py  test_orfs.py
tests/test_jupyter/: test_repr_html.py
tests/test_leaderboard/: test_ranking_e2e.py  test_schema.py  test_submission_e2e.py  test_tracker.py  test_validate_submissions_script.py
tests/test_models/: test_gan_opc.py  test_hub.py  test_integration.py  test_interface.py  test_layout_mae.py  test_levelset_ilt.py  test_neural_ilt.py  test_openilt.py  test_rule_based_opc.py  test_surrogate_ilt.py  test_vae_ilt.py  test_warm_start.py
tests/test_plugins/: test_diffcfd_process.py  test_diffnano_em.py  test_diffnano_resist.py  test_plugin_infrastructure.py
tests/test_server/: test_app.py
tests/test_simulators/: test_simulators.py
tests/test_synth/: test_synth.py
tests/test_utils/: test_auto_crop.py  test_contour_trace.py  test_determinism.py  test_forward_model.py  test_hopkins.py  test_integrity.py  test_morphology.py  test_optics.py  test_resist_model.py  test_tensor_ops.py  test_thick_mask_forward.py
tests/test_vis/: test_contours.py
tests/test_workflow/: test_eda_bridge.py  test_gauges.py  test_halo.py  test_layer_purpose.py  test_lefdef.py  test_parallel.py  test_process_node.py  test_process_window.py  test_schwarz_born.py  test_tiling_consistency.py  test_tiling_residual.py  test_workflow.py
(+87 files in other folders)
