[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "openlithohub"
dynamic = ["version"]
description = "Open-source computational lithography benchmarking and workflow tool"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "OpenLithoHub Contributors" },
]
keywords = ["lithography", "EUV", "OPC", "benchmark", "semiconductor", "EDA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "numpy>=1.24",
    "torch>=2.0",
    "typer[all]>=0.9",
    "pydantic>=2.0",
    "rich>=13.0",
    "tomli>=2.0; python_version<'3.11'",
]

[project.optional-dependencies]
data = [
    "datasets>=2.14",
    "pyarrow>=12.0",
]
workflow = [
    "klayout>=0.28",
    "scipy>=1.10",
]
models = [
    "huggingface_hub>=0.16",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "pytest-benchmark>=4.0",
    "mypy>=1.5",
    "ruff>=0.1",
    "pre-commit>=3.4",
    "Pillow>=10.0",
    "types-PyYAML",
]
docs = [
    "mkdocs-material>=9.4,<10",
    "mkdocstrings[python]>=0.23",
    "mkdocs-gen-files>=0.5",
]
jupyter = [
    "ipython>=8.0",
    "matplotlib>=3.7",
]
export = [
    "onnx>=1.14",
    # onnxscript powers the dynamo-based exporter (torch.export.export
    # → ONNX), the default on PyTorch 2.9+. Without it, export_cmd
    # silently falls back to the deprecated TorchScript path.
    "onnxscript>=0.1",
]
all = ["openlithohub[data,workflow,models,dev,docs,jupyter,export]"]

[project.urls]
Homepage = "https://openlithohub.com"
Documentation = "https://docs.openlithohub.com"
Repository = "https://github.com/OpenLithoHub/OpenLithoHub"
Issues = "https://github.com/OpenLithoHub/OpenLithoHub/issues"

[project.scripts]
openlithohub = "openlithohub.cli.app:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/openlithohub"]

[tool.ruff]
src = ["src"]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]
ignore = ["B008", "B027", "A002"]

[tool.ruff.lint.isort]
known-first-party = ["openlithohub"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["openlithohub"]
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["klayout.*", "datasets.*", "torch.*", "scipy.*", "huggingface_hub.*", "matplotlib.*", "IPython.*", "tomli.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
markers = [
    "slow: marks tests that require large data downloads",
    "requires_klayout: marks tests that need klayout installed",
    "benchmark: performance benchmarks (deselect with -m 'not benchmark')",
]
filterwarnings = [
    # torch >=2.x emits this from inside torch.jit when our hopkins
    # tests touch torch.fft. Not actionable from our side; keep the
    # filter narrow so genuine deprecation warnings still surface.
    "ignore:`torch.jit.script_method` is deprecated.*:DeprecationWarning",
    # torch.jit.trace / trace_method / load — emitted by torch internals
    # when our export tests TorchScript-trace a model. Out of our hands
    # until torch.jit is removed; keep narrow.
    "ignore:`torch.jit.trace` is deprecated.*:DeprecationWarning",
    "ignore:`torch.jit.trace_method` is deprecated.*:DeprecationWarning",
    "ignore:`torch.jit.load` is deprecated.*:DeprecationWarning",
    # Legacy TorchScript-based ONNX exporter — we try the dynamo path
    # first (export_cmd.py) and only fall back to legacy when the model
    # can't be torch.export-ed. Out of our hands until upstream models
    # are dynamo-friendly.
    "ignore:You are using the legacy TorchScript-based ONNX export.*:DeprecationWarning",
    "ignore:The feature will be removed\\. Please remove usage of this function:DeprecationWarning",
]

[tool.coverage.run]
source = ["openlithohub"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
