[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "openlithohub"
dynamic = ["version"]
description = "Open-source computational lithography benchmarking and workflow tool"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10,<3.13"
authors = [
    { name = "OpenLithoHub Contributors" },
]
keywords = ["lithography", "EUV", "OPC", "benchmark", "semiconductor", "EDA"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "numpy>=1.24",
    "torch>=2.12",
    "typer[all]>=0.9",
    "pydantic>=2.0",
    "rich>=13.0",
    "tomli>=2.0; python_version<'3.11'",
    "diff-surrogate @ git+https://github.com/telleroutlook/diff-surrogate.git",
]

[project.optional-dependencies]
data = [
    "datasets>=2.14",
    "pyarrow>=12.0",
    # gdown powers the LithoBench auto-fetcher (Google Drive). Optional —
    # only required when calling LithoBenchDataset.download().
    "gdown>=5.0",
]
workflow = [
    "klayout>=0.28",
    "scipy>=1.10",
]
freepdk45-sram = [
    # OpenRAM ships FreePDK45 SRAM-cell GDS files inside the wheel; the
    # FreePdk45SramDataset adapter locates them via importlib.resources.
    # We don't run OpenRAM's compiler (numpy-2 regression upstream),
    # only consume the bundled GDS — so the pin is a soft floor, not a
    # tight upper bound.
    "openram>=1.2.48",
]
models = [
    "huggingface_hub>=0.16",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.3",
    "pytest-benchmark>=4.0",
    "mypy>=1.5",
    "ruff>=0.1",
    "pre-commit>=3.4",
    "Pillow>=10.0",
    "types-PyYAML",
]
docs = [
    "mkdocs-material>=9.4,<10",
    "mkdocstrings[python]>=0.23",
    "mkdocs-gen-files>=0.5",
]
jupyter = [
    "ipython>=8.0",
    "matplotlib>=3.7",
]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]
export = [
    "onnx>=1.14",
    # onnxscript powers the dynamo-based exporter (torch.export.export
    # → ONNX), the default on PyTorch 2.9+. Without it, export_cmd
    # silently falls back to the deprecated TorchScript path.
    "onnxscript>=0.1",
    # onnxruntime lets the CI smoke test the exported graph end-to-end
    # (load + InferenceSession.run) so a regression in the dynamo
    # exporter cannot ship green just because torch.onnx.export() returned.
    "onnxruntime>=1.17",
]
diffnano = [
    # DiffNano — differentiable nanophotonics (high-precision resist, RCWA/FDTD EM).
    # Early-stage research code; opt-in to keep core lightweight.
    "diffnano @ git+https://github.com/OpenLithoHub/DiffNano.git@2ec61b8",
]
diffcfd = [
    # DiffCFD — differentiable CFD (spin coating, Dill/Mack lithography, joint opt).
    # Early-stage research code; opt-in to keep core lightweight.
    "diffcfd @ git+https://github.com/OpenLithoHub/DiffCFD.git@a95b64e",
]
plugins = ["openlithohub[diffnano]", "openlithohub[diffcfd]"]
all = ["openlithohub[data,workflow,freepdk45-sram,models,dev,docs,jupyter,server,export,plugins]"]

[project.urls]
Homepage = "https://openlithohub.com"
Documentation = "https://docs.openlithohub.com"
Repository = "https://github.com/OpenLithoHub/OpenLithoHub"
Issues = "https://github.com/OpenLithoHub/OpenLithoHub/issues"

[project.scripts]
openlithohub = "openlithohub.cli.app:app"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/openlithohub"]

[tool.ruff]
src = ["src"]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "S"]
ignore = ["B008", "B027", "A002"]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use `assert`, hard-coded localhost URLs, and tmp_path —
# silence S101 / S104 / S105 / S106 / S108 / S311 in the test tree.
"tests/**" = ["S101", "S104", "S105", "S106", "S108", "S311", "S603", "S607"]
# Scripts may legitimately spawn subprocesses with shell-style strings the
# user explicitly authored.
"scripts/**" = ["S101", "S603", "S607", "S404"]
# klayout macro entry points run under klayout's own Python and shell out
# to the klayout CLI itself — the partial-path / subprocess warnings are
# false positives.
"klayout/**" = ["S603", "S607"]
# Source-side: assert is used for mypy-narrowing invariants the type system
# cannot otherwise express; subprocess calls in dataset fetchers run with
# fixed argv built from operator-supplied paths; rule_based pattern synth
# uses random.Random for deterministic seeding, not crypto.
"src/openlithohub/_utils/optics.py" = ["S101"]
"src/openlithohub/cli/optimize_cmd.py" = ["S101"]
"src/openlithohub/data/asap7.py" = ["S603", "S607"]
"src/openlithohub/data/freepdk45.py" = ["S603", "S607"]
"src/openlithohub/data/ganopc.py" = ["S603", "S607"]
"src/openlithohub/data/orfs.py" = ["S101"]
"src/openlithohub/jupyter/magics.py" = ["S603"]
"src/openlithohub/models/hub.py" = ["S101"]
"src/openlithohub/plugins/diffcfd_process.py" = ["S101"]
"src/openlithohub/plugins/diffnano_em.py" = ["S101"]
"src/openlithohub/models/layout_mae.py" = ["S101"]
"src/openlithohub/models/levelset_ilt.py" = ["S101"]
"src/openlithohub/models/neural_ilt.py" = ["S101"]
"src/openlithohub/models/openilt.py" = ["S101"]
"src/openlithohub/models/gan_opc.py" = ["S101"]
"src/openlithohub/synth/rule_based.py" = ["S311"]
"src/openlithohub/vis/heatmaps.py" = ["S101"]

[tool.ruff.lint.isort]
known-first-party = ["openlithohub"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
packages = ["openlithohub"]
mypy_path = "src"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["klayout.*", "datasets.*", "torch.*", "scipy.*", "huggingface_hub.*", "matplotlib.*", "IPython.*", "tomli.*", "onnxscript.*", "fastapi", "fastapi.*", "uvicorn", "gdown", "multivolumefile", "py7zr", "pyarrow", "pyarrow.*"]
ignore_missing_imports = true

# server/app.py uses fastapi decorators which mypy flags as untyped when
# fastapi is not installed in the typecheck environment (the `server`
# extra is opt-in). Disable the cascade for this single module.
[[tool.mypy.overrides]]
module = ["openlithohub.server.app"]
disallow_untyped_decorators = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --tb=short"
markers = [
    "slow: marks tests that require large data downloads",
    "requires_klayout: marks tests that need klayout installed",
    "benchmark: performance benchmarks (deselect with -m 'not benchmark')",
    "gpu: marks tests that require >=2 CUDA GPUs (skipped in default CI)",
]
filterwarnings = [
    # data-root manifest warnings: production bytes get a one-shot
    # warning per (dataset, root) pair; tests use tmp_path roots and
    # would otherwise spam thousands of identical lines. The warning
    # itself is the fix for #74 / #31 — keep narrow so unrelated
    # UserWarnings still surface.
    "ignore:.*has no MANIFEST.SHA256.*:UserWarning",
    "ignore:LithoSimDataset is loading.*revision=.*:UserWarning",
    # torch >=2.x emits this from inside torch.jit when our hopkins
    # tests touch torch.fft. Not actionable from our side; keep the
    # filter narrow so genuine deprecation warnings still surface.
    "ignore:`torch.jit.script_method` is deprecated.*:DeprecationWarning",
    # torch.jit.trace / trace_method / load — emitted by torch internals
    # when our export tests TorchScript-trace a model. Out of our hands
    # until torch.jit is removed; keep narrow.
    "ignore:`torch.jit.trace` is deprecated.*:DeprecationWarning",
    "ignore:`torch.jit.trace_method` is deprecated.*:DeprecationWarning",
    "ignore:`torch.jit.load` is deprecated.*:DeprecationWarning",
    # Legacy TorchScript-based ONNX exporter — we try the dynamo path
    # first (export_cmd.py) and only fall back to legacy when the model
    # can't be torch.export-ed. Out of our hands until upstream models
    # are dynamo-friendly.
    "ignore:You are using the legacy TorchScript-based ONNX export.*:DeprecationWarning",
    "ignore:The feature will be removed\\. Please remove usage of this function:DeprecationWarning",
]

[tool.coverage.run]
source = ["openlithohub"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
